asg/tests/pass/tuples/nested.leo
function main() {
    let a = (true, false);
    let b = (true, a);
}