asg/tests/fail/integers/i16/negate_min.leo
function main() {
    const a = -32768i16;
    const b = -a;
}